src/snapshots/scooter_hx__snapshot_tests__preview_wrapping_on.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |  ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
01 |  │alpha                                                                                                             │  |
02 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
03 |  ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
04 |  │OMEGA                                                                                                             │  |
05 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
06 |                                                                                                                        |
07 |  Results: 1 [Search complete]                                                                    [Time taken: TIME]  |
08 |                                                                                                                        |
09 |  [x] fixture.txt:1                          (1) - alpha long preview context long preview context long preview contex  |
10 |                                                   ↪ t long preview context long preview context long preview context   |
11 |                                                   ↪ long preview context long preview context long preview context lo  |
12 |                                                   ↪ ng preview context long preview context long preview context       |
13 |                                                 + OMEGA long preview context long preview context long preview contex  |
14 |                                                   ↪ t long preview context long preview context long preview context   |
15 |                                                   ↪ long preview context long preview context long preview context lo  |
16 |                                                   ↪ ng preview context long preview context long preview context       |
17 |                                                                                                                        |
18 |                                                                                                                        |
19 |                                                                                                                        |
20 |                                                                                                                        |
21 |                                                                                                                        |
22 |                                                                                                                        |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |           <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit            |
tags:
00: 2-118 text
01: 2-8 text | 117-118 text
02: 2-118 text
03: 2-118 text
04: 2-8 text | 117-118 text
05: 2-118 text
07: 2-12 text | 12-30 diff-added | 98-118 diff-added
09: 2-48 selection | 49-51 diff-removed | 51-56 diff-removed-emph | 56-118 diff-removed
10: 49-53 dim | 53-118 diff-removed
11: 49-53 dim | 53-118 diff-removed
12: 49-53 dim | 53-114 diff-removed | 114-118 preview
13: 49-51 diff-added | 51-56 diff-added-emph | 56-118 diff-added
14: 49-53 dim | 53-118 diff-added
15: 49-53 dim | 53-118 diff-added
16: 49-53 dim | 53-114 diff-added | 114-118 preview
17: 49-118 preview
18: 49-118 preview
19: 49-118 preview
20: 49-118 preview
21: 49-118 preview
22: 49-118 preview
23: 49-118 preview
24: 49-118 preview
25: 49-118 preview
26: 49-118 preview
27: 49-118 preview
28: 49-118 preview
29: 49-118 preview
30: 49-118 preview
31: 49-118 preview
32: 49-118 preview
33: 49-118 preview
34: 49-118 preview
35: 49-118 preview
36: 49-118 preview
37: 49-118 preview
38: 49-118 preview
39: 11-108 info
