src/snapshots/scooter_hx__snapshot_tests__replacement_results_errors_unscrolled.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |  ┌Successful replacements (lines):──────────────────────────────────────────────────────────────────────────────────┐  |
01 |  │1                                                                                                                 │  |
02 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
03 |  ┌Ignored (lines):──────────────────────────────────────────────────────────────────────────────────────────────────┐  |
04 |  │2                                                                                                                 │  |
05 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
06 |  ┌Errors:───────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
07 |  │2                                                                                                                 │  |
08 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
09 |  Errors:                                                                                                               |
10 |                                                                                                                        |
11 |  first.txt:4                                                                                                           |
12 |  permission denied                                                                                                     |
13 |                                                                                                                        |
14 |  second.txt:9                                                                                                          |
15 |  disk full                                                                                                             |
16 |                                                                                                                        |
17 |                                                                                                                        |
18 |                                                                                                                        |
19 |                                                                                                                        |
20 |                                                                                                                        |
21 |                                                                                                                        |
22 |                                                                                                                        |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                               <j> down / <k> up / <C-r> reset / <C-h> help / <C-c> quit                                |
tags:
00: 2-118 text
01: 2-4 text | 117-118 text
02: 2-118 text
03: 2-118 text
04: 2-4 text | 117-118 text
05: 2-118 text
06: 2-118 text
07: 2-4 text | 117-118 text
08: 2-118 text
09: 2-9 text
11: 2-13 text
12: 2-19 error
14: 2-14 text
15: 2-11 error
39: 31-88 info
