src/snapshots/scooter_hx__snapshot_tests__replacement_results_success.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |                                                                                                                        |
01 |                                                                                                                        |
02 |                                                                                                                        |
03 |                                                                                                                        |
04 |                                                                                                                        |
05 |                                                                                                                        |
06 |                                                                                                                        |
07 |                                                                                                                        |
08 |                                                                                                                        |
09 |                                                                                                                        |
10 |                                                                                                                        |
11 |                                                                                                                        |
12 |                                                                                                                        |
13 |                                                                                                                        |
14 |                                                        Success!                                                        |
15 |  ┌Successful replacements (lines):──────────────────────────────────────────────────────────────────────────────────┐  |
16 |  │7                                                                                                                 │  |
17 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
18 |  ┌Ignored (lines):──────────────────────────────────────────────────────────────────────────────────────────────────┐  |
19 |  │2                                                                                                                 │  |
20 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
21 |  ┌Errors:───────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
22 |  │0                                                                                                                 │  |
23 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                                         <C-r> reset / <C-h> help / <C-c> quit                                          |
tags:
14: 56-64 diff-added
15: 2-118 text
16: 2-4 text | 117-118 text
17: 2-118 text
18: 2-118 text
19: 2-4 text | 117-118 text
20: 2-118 text
21: 2-118 text
22: 2-4 text | 117-118 text
23: 2-118 text
39: 41-78 info
